[project]
name = "nmapoutputbrowser"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {email = "magnus.stubman@mandiant.com"},
  {name = "Magnus Stubman"}
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "python-libnmap>=0.7.0",
  "rich"
]

[tool.setuptools]
packages = ["nmapoutputbrowser"]

[project.scripts]
nob = "nmapoutputbrowser.nob:main"
